# tink

./: WORKSPACE  tink_deps.bzl  tink_deps_init.bzl
cc/: BUILD.bazel  WORKSPACE  tink_cc_deps.bzl  tink_cc_deps_init.bzl
cc/integration/awskms/: BUILD.bazel
cc/integration/gcpkms/: BUILD.bazel
cc/mac/: BUILD.bazel
cc/prf/: BUILD.bazel
cc/streamingaead/: BUILD.bazel
cc/util/: BUILD.bazel
examples/helloworld/cc/: BUILD.bazel  WORKSPACE
go/: BUILD.bazel  WORKSPACE  tink_go_deps.bzl  tink_go_deps_init.bzl
go/insecurecleartextkeyset/: BUILD.bazel
go/integration/awskms/: BUILD.bazel  aws_kms_aead_test.go
go/integration/gcpkms/: BUILD.bazel  gcp_kms_aead_test.go
go/integration/hcvault/: hcvault_aead_test.go
go/keyset/: BUILD.bazel  json_io_test.go
go/proto/: BUILD.bazel
go/signature/: verifier_factory.go
go/subtle/: BUILD.bazel
go/subtle/aead/: BUILD.bazel  aes_gcm_test.go  chacha20poly1305_test.go
go/subtle/daead/: BUILD.bazel  aes_siv_test.go
go/subtle/hybrid/: BUILD.bazel  elliptic_curves_test.go
go/subtle/kwp/: BUILD.bazel  kwp_test.go
go/subtle/signature/: BUILD.bazel  ecdsa_signer_verifier_test.go  ed25519_signer_verifier_test.go
go/testkeyset/: BUILD.bazel
go/testutil/: BUILD.bazel  testutil.go  wycheproofutil_test.go
go/tink/: BUILD.bazel
java/: BUILD.bazel  WORKSPACE  tink_java_deps.bzl  tink_java_deps_init.bzl
java/src/main/java/com/google/crypto/tink/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/aead/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/config/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/daead/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/hybrid/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/integration/android/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/mac/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/prf/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/signature/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/streamingaead/: BUILD.bazel
java/src/main/java/com/google/crypto/tink/testing/: BUILD.bazel  TestUtil.java
java/src/test/java/com/google/crypto/tink/: IntegrationTest.java
javascript/: BUILD.bazel  WORKSPACE  tink_javascript_deps.bzl  tink_javascript_deps_init.bzl
javascript/aead/: BUILD.bazel
javascript/exception/: BUILD.bazel
javascript/hybrid/: BUILD.bazel
javascript/signature/: BUILD.bazel
javascript/subtle/: BUILD.bazel
javascript/subtle/purejs/: BUILD.bazel
proto/: BUILD.bazel  aes_cmac.proto  aes_ctr.proto  aes_ctr_hmac_aead.proto  aes_ctr_hmac_streaming.proto  aes_eax.proto  aes_gcm.proto  aes_gcm_hkdf_streaming.proto  aes_gcm_siv.proto  aes_siv.proto  chacha20_poly1305.proto  common.proto  config.proto  ecdsa.proto  ecies_aead_hkdf.proto  ed25519.proto  empty.proto  hkdf_prf.proto  hmac.proto  kms_aead.proto  kms_envelope.proto  prf_based_deriver.proto  rsa_ssa_pkcs1.proto  rsa_ssa_pss.proto  tink.proto  xchacha20_poly1305.proto
