# gazelle:ignore

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# -----------------------------------------------
# common
# -----------------------------------------------
proto_library(
    name = "common_proto",
    srcs = [
        "common.proto",
    ],
)

# -----------------------------------------------
# tink
# -----------------------------------------------
proto_library(
    name = "tink_proto",
    srcs = [
        "tink.proto",
    ],
    deps = [
        ":common_proto",
    ],
)

# -----------------------------------------------
# config
# -----------------------------------------------
proto_library(
    name = "config_proto",
    srcs = [
        "config.proto",
    ],
)

# -----------------------------------------------
# aes-siv
# -----------------------------------------------
proto_library(
    name = "aes_siv_proto",
    srcs = [
        "aes_siv.proto",
    ],
)

# -----------------------------------------------
# rsa_ssa_pkcs1
# -----------------------------------------------
proto_library(
    name = "rsa_ssa_pkcs1_proto",
    srcs = [
        "rsa_ssa_pkcs1.proto",
    ],
    deps = [
        ":common_proto",
    ],
)

# -----------------------------------------------
# rsa_ssa_pss
# -----------------------------------------------
proto_library(
    name = "rsa_ssa_pss_proto",
    srcs = [
        "rsa_ssa_pss.proto",
    ],
    deps = [
        ":common_proto",
    ],
)

# -----------------------------------------------
# ecdsa
# -----------------------------------------------
proto_library(
    name = "ecdsa_proto",
    srcs = [
        "ecdsa.proto",
    ],
    deps = [
        ":common_proto",
    ],
)

# -----------------------------------------------
# ed25519
# -----------------------------------------------
proto_library(
    name = "ed25519_proto",
    srcs = [
        "ed25519.proto",
    ],
)

# -----------------------------------------------
# aes_cmac
# -----------------------------------------------
proto_library(
    name = "aes_cmac_proto",
    srcs = [
        "aes_cmac.proto",
    ],
    deps = [],
)

cc_proto_library(
    name = "aes_cmac_cc_proto",
    deps = [":aes_cmac_proto"],
)

# -----------------------------------------------
# hmac
# -----------------------------------------------
proto_library(
    name = "hmac_proto",
    srcs = [
        "hmac.proto",
    ],
    deps = [":common_proto"],
)

# -----------------------------------------------
# aes_ctr
# -----------------------------------------------
proto_library(
    name = "aes_ctr_proto",
    srcs = [
        "aes_ctr.proto",
    ],
)

# -----------------------------------------------
# aes_ctr_hmac_aead
# -----------------------------------------------
proto_library(
    name = "aes_ctr_hmac_aead_proto",
    srcs = [
        "aes_ctr_hmac_aead.proto",
    ],
    deps = [
        ":aes_ctr_proto",
        ":hmac_proto",
    ],
)

# -----------------------------------------------
# aes_gcm
# -----------------------------------------------
proto_library(
    name = "aes_gcm_proto",
    srcs = [
        "aes_gcm.proto",
    ],
)

# -----------------------------------------------
# aes_gcm_siv
# -----------------------------------------------
proto_library(
    name = "aes_gcm_siv_proto",
    srcs = [
        "aes_gcm_siv.proto",
    ],
)

# -----------------------------------------------
# aes_ctr_hmac_streaming
# -----------------------------------------------
proto_library(
    name = "aes_ctr_hmac_streaming_proto",
    srcs = ["aes_ctr_hmac_streaming.proto"],
    deps = [
        ":common_proto",
        ":hmac_proto",
    ],
)

# -----------------------------------------------
# aes_gcm_hkdf_streaming
# -----------------------------------------------
proto_library(
    name = "aes_gcm_hkdf_streaming_proto",
    srcs = ["aes_gcm_hkdf_streaming.proto"],
    deps = [":common_proto"],
)

# -----------------------------------------------
# aes_eax
# -----------------------------------------------
proto_library(
    name = "aes_eax_proto",
    srcs = [
        "aes_eax.proto",
    ],
)

# -----------------------------------------------
# chacha20_poly1305
# -----------------------------------------------
proto_library(
    name = "chacha20_poly1305_proto",
    srcs = [
        "chacha20_poly1305.proto",
    ],
)


# -----------------------------------------------
# kms_aead
# -----------------------------------------------
proto_library(
    name = "kms_aead_proto",
    srcs = [
        "kms_aead.proto",
    ],
)

# -----------------------------------------------
# kms_envelope
# -----------------------------------------------
proto_library(
    name = "kms_envelope_proto",
    srcs = [
        "kms_envelope.proto",
    ],
    deps = [":tink_proto"],
)

# -----------------------------------------------
# ecies_aead_hkdf
# -----------------------------------------------
proto_library(
    name = "ecies_aead_hkdf_proto",
    srcs = [
        "ecies_aead_hkdf.proto",
    ],
    deps = [
        ":common_proto",
        ":tink_proto",
    ],
)

# -----------------------------------------------
# XChacha20 with Poly1305
# -----------------------------------------------
proto_library(
    name = "xchacha20_poly1305_proto",
    srcs = [
        "xchacha20_poly1305.proto",
    ],
)

# -----------------------------------------------
# Hkdf prf
# -----------------------------------------------
proto_library(
    name = "hkdf_prf_proto",
    srcs = [
        "hkdf_prf.proto",
    ],
    deps = [":common_proto"],
)


# ----------------------------------------------------------------------------
# prf_based_deriver
# ----------------------------------------------------------------------------
proto_library(
    name = "prf_based_deriver_proto",
    srcs = ["prf_based_deriver.proto"],
    deps = [":tink_proto"],
)

# -----------------------------------------------
# empty
# -----------------------------------------------
proto_library(
    name = "empty_proto",
    srcs = [
        "empty.proto",
    ],
)

