package(
    default_visibility = [
        "//:__subpackages__",
    ],
)

licenses(["notice"])

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

closure_js_library(
    name = "aead",
    exports = [
        ":aead_config",
        ":aead_key_templates",
        ":aead_wrapper",
        ":aes_ctr_hmac_aead_key_manager",
        ":aes_ctr_hmac_aead_key_templates",
        ":aes_gcm_key_manager",
        ":aes_gcm_key_templates",
        ":exports",
    ],
)

closure_js_library(
    name = "exports",
    srcs = [
        "exports.js",
    ],
    deps = [
        ":aead_config",
        ":aead_key_templates",
        ":aead_wrapper",
        ":aes_ctr_hmac_aead_key_manager",
        ":aes_gcm_key_manager",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aes_ctr_hmac_aead_key_manager",
    srcs = [
        "aes_ctr_hmac_aead_key_manager.js",
    ],
    deps = [
        "//:key_manager",
        "//:primitives",
        "//:registry",
        "//exception",
        "//subtle",
        "//subtle:aead",
        "//:aes_ctr_closure_proto",
        "//:aes_ctr_hmac_aead_closure_proto",
        "//:common_closure_proto",
        "//:hmac_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aes_gcm_key_manager",
    srcs = [
        "aes_gcm_key_manager.js",
    ],
    deps = [
        "//:key_manager",
        "//:primitives",
        "//:registry",
        "//exception",
        "//subtle",
        "//subtle:aead",
        "//:aes_gcm_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/protobuf:jspb",
    ],
)

closure_js_library(
    name = "aes_ctr_hmac_aead_key_templates",
    srcs = [
        "aes_ctr_hmac_aead_key_templates.js",
    ],
    deps = [
        ":aes_ctr_hmac_aead_key_manager",
        "//:aes_ctr_closure_proto",
        "//:aes_ctr_hmac_aead_closure_proto",
        "//:common_closure_proto",
        "//:hmac_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aes_gcm_key_templates",
    srcs = [
        "aes_gcm_key_templates.js",
    ],
    deps = [
        ":aes_gcm_key_manager",
        "//:aes_gcm_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aead_key_templates",
    srcs = [
        "aead_key_templates.js",
    ],
    deps = [
        ":aes_ctr_hmac_aead_key_templates",
        ":aes_gcm_key_templates",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aead_config",
    srcs = [
        "aead_config.js",
    ],
    deps = [
        ":aead_wrapper",
        ":aes_ctr_hmac_aead_key_manager",
        ":aes_gcm_key_manager",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "aead_wrapper",
    srcs = [
        "aead_wrapper.js",
    ],
    deps = [
        "//:crypto_format",
        "//:primitive_set",
        "//:primitive_wrapper",
        "//:primitives",
        "//:registry",
        "//exception",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

# test

closure_js_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob([
        "*_test.js",
    ]),
    deps = [
        "//:aes_ctr_closure_proto",
        "//:aes_ctr_hmac_aead_closure_proto",
        "//:aes_gcm_closure_proto",
        "//:common_closure_proto",
        "//:hmac_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/library/testing:asserts",
        "@io_bazel_rules_closure//closure/library/testing:jsunit",
        "@io_bazel_rules_closure//closure/library/testing:testsuite",
        "@io_bazel_rules_closure//closure/library/useragent",
    ],
)
