package(
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

closure_js_library(
    name = "exception",
    srcs = glob([
        "*.js",
    ]),
    deps = [
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/library/debug:error",
    ],
)
