package(
    default_visibility = [
        "//:__subpackages__",
    ],
)

licenses(["notice"])

load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

closure_js_library(
    name = "signature",
    exports = [
        ":config",
        ":ecdsa_key_managers",
        ":key_templates",
        ":utils",
        ":wrappers",
    ],
)

closure_js_library(
    name = "utils",
    srcs = [
        "ecdsa_util.js",
    ],
    deps = [
        "//:util",
        "//exception",
        "//subtle",
        "//:common_closure_proto",
        "//:ecdsa_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "ecdsa_key_managers",
    srcs = [
        "ecdsa_private_key_manager.js",
        "ecdsa_public_key_manager.js",
    ],
    deps = [
        ":utils",
        "//:key_manager",
        "//:primitives",
        "//:util",
        "//exception",
        "//subtle",
        "//subtle:signature",
        "//:ecdsa_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/protobuf:jspb",
    ],
)

closure_js_library(
    name = "wrappers",
    srcs = [
        "public_key_sign_wrapper.js",
        "public_key_verify_wrapper.js",
    ],
    deps = [
        "//:crypto_format",
        "//:primitive_set",
        "//:primitive_wrapper",
        "//:primitives",
        "//exception",
        "//subtle",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "config",
    srcs = [
        "signature_config.js",
    ],
    deps = [
        ":ecdsa_key_managers",
        ":wrappers",
        "//:registry",
        "//aead:aead_config",
        "@io_bazel_rules_closure//closure/library",
    ],
)

closure_js_library(
    name = "key_templates",
    srcs = [
        "signature_key_templates.js",
    ],
    deps = [
        ":config",
        "//:common_closure_proto",
        "//:ecdsa_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
    ],
)

# test

closure_js_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob([
        "*_test.js",
    ]),
    deps = [
        "//:common_closure_proto",
        "//:ecdsa_closure_proto",
        "//:tink_closure_proto",
        "@io_bazel_rules_closure//closure/library",
        "@io_bazel_rules_closure//closure/library/testing:asserts",
        "@io_bazel_rules_closure//closure/library/testing:jsunit",
        "@io_bazel_rules_closure//closure/library/testing:testsuite",
        "@io_bazel_rules_closure//closure/library/useragent",
    ],
)
