licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "*.java",
        ],
    ),
)

full_protos = [
    "//:aes_siv_java_proto",
    "//:common_java_proto",
    "//:config_java_proto",
    "//:tink_java_proto",
]

lite_protos = [
    "//:aes_siv_java_proto_lite",
    "//:common_java_proto_lite",
    "//:config_java_proto_lite",
    "//:tink_java_proto_lite",
]

java_library(
    name = "daead",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = full_protos + [
        "//src/main/java/com/google/crypto/tink",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:daead",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_library(
    name = "android",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = lite_protos + [
        "//src/main/java/com/google/crypto/tink:android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:daead",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)
