licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "*.java",
        ],
    ),
)

full_protos = [
    "//:aes_ctr_hmac_aead_java_proto",
    "//:aes_ctr_java_proto",
    "//:aes_gcm_java_proto",
    "//:common_java_proto",
    "//:config_java_proto",
    "//:ecies_aead_hkdf_java_proto",
    "//:empty_java_proto",
    "//:hmac_java_proto",
    "//:tink_java_proto",
]

lite_protos = [
    "//:aes_ctr_hmac_aead_java_proto_lite",
    "//:aes_ctr_java_proto_lite",
    "//:aes_gcm_java_proto_lite",
    "//:common_java_proto_lite",
    "//:config_java_proto_lite",
    "//:ecies_aead_hkdf_java_proto_lite",
    "//:empty_java_proto",
    "//:hmac_java_proto_lite",
    "//:tink_java_proto_lite",
]

java_library(
    name = "hybrid",
    srcs = [
        ":srcs",
    ],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = full_protos + [
        "//src/main/java/com/google/crypto/tink",
        "//src/main/java/com/google/crypto/tink/aead",
        "//src/main/java/com/google/crypto/tink/mac",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:hybrid",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_library(
    name = "android",
    srcs = [
        ":srcs",
    ],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = lite_protos + [
        "//src/main/java/com/google/crypto/tink:android",
        "//src/main/java/com/google/crypto/tink/aead:android",
        "//src/main/java/com/google/crypto/tink/mac:android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:hybrid",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)
