load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

java_library(
    name = "hkdf_prf_key_manager",
    srcs = ["HkdfPrfKeyManager.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        "//src/main/java/com/google/crypto/tink:core",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle/prf:hkdf_streaming_prf",
        "//src/main/java/com/google/crypto/tink/subtle/prf:streaming_prf",
        "//:common_java_proto",
        "//:hkdf_prf_java_proto",
        "//:tink_java_proto",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_library(
    name = "prf_key_templates",
    srcs = ["PrfKeyTemplates.java"],
    deps = [
        ":hkdf_prf_key_manager",
        "//:common_java_proto",
        "//:hkdf_prf_java_proto",
        "//:tink_java_proto",
    ],
)

java_library(
    name = "hkdf_prf_key_manager-android",
    srcs = ["HkdfPrfKeyManager.java"],
    javacopts = JAVACOPTS_OSS,
    deps = [
        "//src/main/java/com/google/crypto/tink:core-android",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle/prf:hkdf_streaming_prf",
        "//src/main/java/com/google/crypto/tink/subtle/prf:streaming_prf",
        "//:common_java_proto_lite",
        "//:hkdf_prf_java_proto_lite",
        "//:tink_java_proto_lite",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_library(
    name = "prf_key_templates-android",
    srcs = ["PrfKeyTemplates.java"],
    deps = [
        ":hkdf_prf_key_manager-android",
        "//:common_java_proto_lite",
        "//:hkdf_prf_java_proto_lite",
        "//:tink_java_proto_lite",
    ],
)
