licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

load("//tools/build_defs:javac.bzl", "JAVACOPTS_OSS")

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "*.java",
        ],
    ),
)

full_protos = [
    "//:common_java_proto",
    "//:config_java_proto",
    "//:ecdsa_java_proto",
    "//:ed25519_java_proto",
    "//:empty_java_proto",
    "//:rsa_ssa_pkcs1_java_proto",
    "//:rsa_ssa_pss_java_proto",
    "//:tink_java_proto",
]

lite_protos = [
    "//:common_java_proto_lite",
    "//:config_java_proto_lite",
    "//:ecdsa_java_proto_lite",
    "//:ed25519_java_proto_lite",
    "//:empty_java_proto_lite",
    "//:rsa_ssa_pkcs1_java_proto_lite",
    "//:rsa_ssa_pss_java_proto_lite",
    "//:tink_java_proto_lite",
]

java_library(
    name = "signature",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = full_protos + [
        "//src/main/java/com/google/crypto/tink",
        "//src/main/java/com/google/crypto/tink/annotations",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:signature",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)

java_library(
    name = "android",
    srcs = [":srcs"],
    javacopts = JAVACOPTS_OSS,
    visibility = ["//visibility:public"],
    deps = lite_protos + [
        "//src/main/java/com/google/crypto/tink:android",
        "//src/main/java/com/google/crypto/tink/annotations",
        "//src/main/java/com/google/crypto/tink/subtle",
        "//src/main/java/com/google/crypto/tink/subtle:signature",
        "@com_google_protobuf_javalite//:protobuf_java_lite",
    ],
)
